# slick_logger

./: .gitignore  BENCHMARK_SETUP.md  CHANGELOG  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  README.md  benchmark_config.hpp  benchmark_main.cpp  benchmark_utils.hpp  latency_benchmark.cpp  memory_benchmark.cpp  quick_benchmark.cpp  run_benchmarks.bat  run_benchmarks.sh  simple_benchmark.cpp  system_monitor.hpp  test_scenarios.hpp  throughput_benchmark.cpp
cmake/: slick_loggerConfig.cmake.in
examples/: CMakeLists.txt  example.cpp  multi_sink_example.cpp  timestamp_example.cpp
include/slick/: logger.hpp
include/slick_logger/: logger.hpp  sinks.hpp  version.hpp
src/: logger.hpp  version.hpp.in
tests/: CMakeLists.txt  test_logger.cpp  test_sinks.cpp  test_timestamp.cpp
